# MyEsp32Idf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build_config.cmd  esptool.py  get_sdk.cmd  host_port.cmd  make_flash.cmd  make_monitor.cmd  partitions.csv  sdkconfig  sdkconfig.defaults  upgrade.sh
components/LedBlink2/: CMakeLists.txt  LedBlink2.cpp
components/LedBlink2/include/: LedBlink2.h
components/esp32_digital_led_lib/: CMakeLists.txt  esp32_digital_led_lib.cpp
components/esp32_digital_led_lib/include/: esp32_digital_led_lib.h
components/mad/: CMakeLists.txt  align.c  bit.c  decoder.c  frame.c  layer12.c  layer3.c  stream.c  synth_mono.c.unused  synth_stereo.c  version.c
components/mad/include/: align.h  config.h  decoder.h  fixed.h  frame.h  global.h  mad.h  stream.h
main/: CMakeLists.txt  RcReceiver.cpp  RcReceiver.h  doorbell_recv.cpp  doorbell_recv.h  i2s_sink.cpp  i2s_sink.h  i2sstuff.cpp  i2sstuff.h  main.cpp  mp3player.c  mp3player.cpp  mp3player.h  my_display.cpp  my_display.h  my_mqtt.cpp  my_mqtt.h  player.cpp  player.h  sd_doorbell.cpp  sd_doorbell.h  sound.cpp  sound.h  test_SSD1306.cpp  test_SSD1306.h  tunes.cpp  tunes.h  u8g2_esp32_hal.cpp  u8g2_esp32_hal.h
